# goops

./: CMakeLists.txt  Makefile  Makefile.in  ProjectHome.md  TODO  config.status  configure  goops.h  goops.kdevelop  goops.kdevelop.filelist  goops.kdevelop.pcs  goops.kdevses  goops_types.h
CMakeModules/: FindCat.cmake  FindFFTW.cmake  FindGoops.cmake
autom4te.cache/: output.0  traces.0
fft/: Makefile  fft.C  fft.h  fft_types.h  fftclass.C  fftclass.h  s_fft_h_z.h  s_rfft_h_z.C  v_rfft.h  v_rfft_h_z.C  v_rfft_h_z.h
gffti/: Makefile  Makefile.in  fft.C  fft.h  fft_types.h  gffti_types.h  plan.C  plan.h  s_cosfft_1d.h  s_rfft.h  s_rfft_h_z.C  s_rfft_h_z.h  testgffti.C  v_rfft.h  v_rfft_h_z.h  v_rfft_h_z_ccs.C  v_rfft_h_z_ccs.h  v_rfft_h_z_ssc.C  v_rfft_h_z_ssc.h
gffti/old/: README  s_fft.h  s_sinfft_1d.C  v_rfft_h_z_ccs.h
goops/: CMakeLists.txt  goops.h
goops/fft/: fftclass.C  make.test  s_fft_h_z.h  testsffthz.C
goops/spectral/: spectral_fourier.C  spectral_fourier_layer.h
gspectral/: Makefile  spectral.h  spectral_fourier.C  spectral_fourier.h  spectral_fourier_layer.C  spectral_fourier_layer.h
implementation/fft/: Makefile.in  fft.h  plan.C  plan.h  s_rfft_h_z.h  testsffthz  v_rfft.h
implementation/spectral/: Makefile.in  spectral.h  spectral_fourier.h  spectral_fourier_layer.C
spectral/: Makefile  Makefile.in  globals.h  spectral_fourier.C  spectral_fourier_base.C  spectral_fourier_base.h  spectral_fourier_layer.C  spectral_fourier_layer.h
test/: CMakeLists.txt  testgffti.C  testsffthz.C
testing/: Makefile  Makefile.in  testgffti.C
trunk/: Doxyfile  Makefile  Makefile.in  README  config.status  configure  configure.ac  gmon.out  goops.h  goops.kdevelop  goops.kdevelop.filelist  goops.kdevelop.pcs  goops.kdevses  goops_gpl_header.txt  goops_types.h
trunk/autom4te.cache/: requests  traces.0
trunk/fft/: Makefile  fft.h  fftclass.C  fftclass.h  plan.h  s_rfft_h_z.C  s_rfft_h_z.h  v_rfft_h_z.h
trunk/gffti/: Makefile  Makefile.in  fft.C  fft.h  fft_types.h  fftw_types.h  gffti.h  plan.C  plan.h  s_rfft_h_z.C  s_rfft_h_z.h  s_sinfft_1d.h  testgffti  v_rfft_h_z.C  v_rfft_h_z_ccs.C  v_rfft_h_z_ssc.C  v_rfft_h_z_ssc.h
trunk/gffti/old/: fft_base.h  s_cosfft_1d.C
trunk/gspectral/: Makefile  spectral_fourier.h  spectral_fourier_layer.C  spectral_fourier_layer.h
trunk/spectral/: globals.h  spectral_fourier.C  spectral_fourier.h  spectral_fourier_base.C  spectral_fourier_base.h  spectral_fourier_layer.C  spectral_fourier_layer.h
trunk/testing/: Makefile
